HTML & CSS changes
Added copyright names and made the css look a little prettier

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <body>
 <div class="game_wrapper" id="game_wrapper"></div>
-<p class="footer">&copy;</p>
+<p class="footer">&copy; Copyright 2015<br>Joseph El-Khouri, Hannah Sexton, Katherine Bonesteel, Anissa Tannehill, David Cable</p>
 </body>
 </html>
