scoreboard gfx updates
also added music attributions

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
 <div class="game_wrapper" id="game_wrapper"></div>
 <p class="footer">&copy; Copyright 2015<br>Joseph El-Khouri, Hannah Sexton, Katherine Bonesteel, Anissa Tannehill, David Cable</p>
+<p class="footer" style="color: #434343">Music (CC BY-NC-SA 3.0) by Joseph El-Khouri // Level 2 is a cover of Goodra's "Stained Glass" on battleofthebits.org<br></p>
+
 </body>
+
 </html>
